# rotator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RotationInfo.cpp  RotationInfo.h  TextureFinder.cpp  in.csv  main.cpp  sample_in.csv  verifier.h
src/: .gitignore  CMakeLists.txt  RotationInfo.cpp  RotationInfo.h  Texture.h  TextureFinder.cpp  TextureFinder.h  TextureType.h  main.cpp  texture_getter.cu  texture_getter.cuh  verifier.h
src/textures/: SodiumTexture.h  SodiumTexture19.h  Texture.cpp
textures/: Texture.h  VanillaTexture.h
